archive-relay 커파일 완료